--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<![CDATA[
+<![CDATA[
 <?xml version="1.0" encoding="UTF-8" ?> 
 
 <script type="text/JavaScript">
@@ -32,6 +32,7 @@
 	var SubmitBtn;
 	//Closeボタン参照変数
 	var CloseBtn;
+
 
 
 	//ページロード時の処理
@@ -103,7 +104,7 @@
 		// iframeの大きさや表示位置をセット
 		CommentField.style.position = "absolute";
 		CommentField.style.top = 80;
-		CommentField.style.left = 220;
+		CommentField.style.left = 260;
 		CommentField.style.width = 230;
 		CommentField.style.height = 270;
 
@@ -155,7 +156,7 @@
 
 		//POPUPに初期画像を組み込む
 		PopUpField.Div.appendChild(ImgNormal);
-		var Question = new CommentCls(1,"こんにちは。\n何でも聞いてくださいね。");
+		var Question = new CommentCls(1,"やあ、こんにちは。\n何でも聞いてよ。");
 
 
         //---------PopUpを読み込む--------------
