--- a/index.html
+++ b/index.html
@@ -441,8 +441,7 @@ setTimeout(function(){
 setTimeout(function(){
     var Question = new CommentCls(1,"暇はないよ");
 },800);
-
-}else if(InputText.match("^遊ば.*")){
+}else if(InputText.match("^遊ぼ.*")){
 setTimeout(function(){
     var Question = new CommentCls(1,"遊ぶのは無理だね");
 },800);
@@ -465,9 +464,9 @@ setTimeout(function(){
 },800);
 
 }else if(InputText.match(".*暇.*")){
-
 setTimeout(function(){
-    var Question = new CommentCls(1,"俺に暇は無いの！君が話かけるから");
+    var Question = new CommentCls(1,"ごめんね、用事があるから無理だね");
+
 },800);
 
 }else if(InputText.match("サッカー.*")){
